--- a/src/main/java/views/VMenuCocinero.form
+++ b/src/main/java/views/VMenuCocinero.form
@@ -31,17 +31,14 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jButton6" min="-2" pref="144" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Component id="jButton5" min="-2" pref="131" max="-2" attributes="0"/>
-                      <EmptySpace pref="65" max="32767" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="131" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="jButton6" min="-2" pref="144" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" pref="141" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+              <EmptySpace pref="205" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jButton4" min="-2" pref="131" max="-2" attributes="0"/>
                   <Component id="jButton2" min="-2" pref="116" max="-2" attributes="0"/>
@@ -57,15 +54,18 @@
               <Component id="jLabel1" min="-2" pref="31" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton5" alignment="3" min="-2" pref="101" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" pref="101" max="-2" attributes="0"/>
+                  <Component id="jButton5" alignment="3" min="-2" pref="62" max="-2" attributes="0"/>
                   <Component id="jButton4" alignment="3" min="-2" pref="101" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" pref="59" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
               <Component id="jButton6" min="-2" pref="42" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jButton2" min="-2" pref="75" max="-2" attributes="0"/>
-              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <EmptySpace pref="458" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
