--- a/src/main/java/views/VMenuCocinero.form
+++ b/src/main/java/views/VMenuCocinero.form
@@ -109,6 +109,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Extras"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExtrasActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Events>
