--- a/src/main/java/views/mesero/VMReviewComanda.form
+++ b/src/main/java/views/mesero/VMReviewComanda.form
@@ -126,6 +126,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tablePlatilloMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -174,6 +177,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableBebidaMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
